fix: Remove grid layout to make sure z-index order

--- a/src/dialog_settings/MenuItem.css
+++ b/src/dialog_settings/MenuItem.css
@@ -3,7 +3,7 @@
   cursor: pointer;  
 
   border-radius: 10px;
-  font-size: 28px;
+  font-size: 26px;
   height: 28px;
   width: 220px;
   padding: 12px;
