--- a/src/dialog_settings/MenuList.css
+++ b/src/dialog_settings/MenuList.css
@@ -1,6 +1,6 @@
 .menuList {
-  grid-row: 2;
-  grid-column: 1;
+  top: 40px;
+  position: absolute;
   width: 220px;
   height: 100%;
   padding: 0px;
