--- a/src/dialog_settings/SettingPages.css
+++ b/src/dialog_settings/SettingPages.css
@@ -1,10 +1,9 @@
 .settingPages {
+  position: absolute;
+  top: 40px;
+  left: 220px;
   padding: 0px;
   margin: 0px;
-  grid-row: 2;
-  grid-column: 2;
   width: 100%;
   height: 100%;
-  z-index: 200;
-
 }
