--- a/src/dialog_settings/SettingsDialog.css
+++ b/src/dialog_settings/SettingsDialog.css
@@ -1,11 +1,4 @@
 .settingsDialog {
   width: 100%;
   height: 350px;
-  display: grid;
-  grid-template-columns:
-   /* col 1 */ auto
-   /* col 2 */ 1fr;
-  grid-template-rows:
-   /* row 1 */ 40px
-   /* row 2 */ auto;
 }
